Dojo: improve code structure for MyImp cloze question task (level 2) (#1525)
Um den Studierenden die Aufgabe zu vereinfachen und um zu vermeiden,
dass sie an den "falschen" Stellen editieren, soll den Studierenden der
von ihnen zu bearbeitende Code ohne weitere "Ablenkungen" in einer
Klasse präsentiert werden.

Dazu wird in diesem PR die bisherige Vorgabe `MyImp` aufgeteilt in eine
interne Klasse mit statischen Methoden zum Konfigurieren einer Entität
als "MyImp" und einer Klasse
`dojo.utils.studentTasks.modifyEntities.ModifyEntities`, welche nun nur
noch aus den von den Studierenden zu implementierenden Methoden besteht.
Diese sind zudem nach aufsteigender Schwierigkeit sortiert.


closes #1515